# LLM_for_Security_Log_Detection

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/white_paper/: README.md
infrastructure/terraform/: main.tf
models/: log_classifier.joblib
results/: synthetic_logs_analysis_20250517_114850.json  synthetic_logs_classified.csv  synthetic_logs_preprocessed.csv
results/benchmarks/: benchmark_results.json
src/: security_analyzer.py
src/sentinel/: __init__.py
src/sentinel/analyzers/: __init__.py  entity_extraction.py  event_extractor.py  ip_analyzer.py  mitre_mapper.py  orchestrator.py  recommendation.py  root_cause.py  time_analyzer.py  url_analyzer.py
src/sentinel/api/: app.py  dependencies.py  middleware.py
src/sentinel/api/routes/: analyze.py  classify.py  feedback.py  health.py
src/sentinel/classifiers/: __init__.py  anomaly.py  base.py  bert.py  calibration.py  llm.py  pipeline.py  regex.py
src/sentinel/cli/: main.py
src/sentinel/core/: __init__.py  config.py  enums.py  exceptions.py  models.py
src/sentinel/evaluation/: __init__.py  adversarial.py  benchmark.py  datasets.py  metrics.py  mlflow_tracking.py  train.py  zero_shot.py
src/sentinel/explainability/: __init__.py  shap_explainer.py
src/sentinel/feedback/: __init__.py  feedback_store.py
src/sentinel/parsers/: __init__.py  base.py  generic.py  hdfs.py  openstack.py  registry.py  syslog.py  web_server.py
src/sentinel/privacy/: __init__.py  pii_detector.py
src/sentinel/streaming/: __init__.py  kafka_consumer.py
src/sentinel/utils/: __init__.py  io.py
templates/: index.html
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_adversarial.py  test_analyzers.py  test_anomaly.py  test_calibration.py  test_classifiers.py  test_feedback.py  test_models.py  test_parsers.py  test_pii.py  test_zero_shot.py
